--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -66,8 +66,12 @@
                 <textarea class="form-control" id="mensaje" rows="3"></textarea>
                 <label for=""></label>
                 <input class="boton" type="button" value="Enviar">
-            </div>            
-        </form>        
+            </div>
+            <div class="mb-3 w-50">
+                <img src="../assets/imagenes/Logo-COD-BO6.png" alt="Logo Call Of Duty Black Ops 6">
+            </div>
+        </form>
+        
     </main>
     <footer>
         <a href="#inicio1"><img src="../assets/imagenes/footer/flechas-arriba.png" alt="flecha arriba" class="imgFooter">Volver arriba</a>
