Se crean carruseles para las imagenes de armamento, adaptacion de imagenes responsivas, se agrega transicion en modos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -67,8 +67,8 @@
                 <label for=""></label>
                 <input class="boton" type="button" value="Enviar">
             </div>
-            <div class="mb-3 w-50">
-                <img src="../assets/imagenes/Logo-COD-BO6.png" alt="Logo Call Of Duty Black Ops 6">
+            <div class="mb-3 w-75">
+                <img src="../assets/imagenes/Logo-COD-BO6.png" alt="Logo Call Of Duty Black Ops 6" class="imgMenuHor">
             </div>
         </form>
         
