--- a/pages/modos.html
+++ b/pages/modos.html
@@ -58,8 +58,8 @@
                 <p>En el modo <em>Extremo</em> hay fuego aliado, penalizacion y no vemos los indicadores de balas o granadas restantes ni mejoras de campo o rachas, solo nos mostrara un punto en su lugar. ¿Que significa fuego aliado? que las balas, granadas y rachas de baja tambien impactan a nuestros compañeros, asi que deberemos tener mucho cuidado al momento de atacar ya que despeus de eliminar a un par el juego nos penaliza y en lugar de morir ellos nos elimina a nosotros. Esto lo hacen para que no haya trolls matando amigos todo el tiempo y se pueda jugar la partida.</p>
             </div>
         </div>
-        <h3>Lista de partidas</h3>
-        <p>La lista de partidas que podemos seleccionar es la siguiente y les indicaremos como se juega cada modo al posarse sobre el deseado:</p>
+        <h3>Filtro de partidas</h3>
+        <p>Los filtros de partidas que podemos seleccionar son los siguientes y les indicaremos como se juega cada modo al posarse sobre el deseado:</p>
         <div class="container-fluid">
             <div class="row g-2 m-2">
                 <div class="modoJuego col-12 col-md-6">
