--- a/pages/armamento.html
+++ b/pages/armamento.html
@@ -49,13 +49,15 @@
         </nav>
         <h1>Armamento</h1> <!--Titulo-->
     </header>
-    <main class="">
-        <h2>Armamentos</h2>
-        <p>En el menu de Armas podemos configurar nuestro armamento, seleccionar las rachas de baja y probar el arma configurada en la galeria de tiro</p>
-        <div id="armas">
-            <img src="../assets/imagenes/Menu-armas.png" alt="Menu de armamento, rachas o galeria de tiro" class="imgMenuHor">
+    <main>
+        <div class="m-2">
+            <h2>Armamentos</h2>
+            <p>En el menu de Armas podemos configurar nuestro armamento, seleccionar las rachas de baja y probar el arma configurada en la galeria de tiro</p>
+            <div id="armas">
+                <img src="../assets/imagenes/Menu-armas.png" alt="Menu de armamento, rachas o galeria de tiro" class="imgMenuHor">
+            </div>
         </div>
-        <div class="container-fluid">
+        <div class="m-2">
             <p>El armamento está compuesto por el arma principal, el arma secundaria (podemos equipar otra principal usando el comodín "Exceso de medios"), un arma cuerpo a cuerpo, equipamiento táctico, equipamiento letal, mejora de campo y 3 ventajas (pueden ser 4 si equipamos el comodín "Ventaja extra"), si las ventajas son del mismo "color" obtenemos una especialidad. Para entenderlo mejor vamos a dividirlo en 4 partes: <em>armas, equipamiento, ventajas y comodin</em>.</p>
         </div>
         <div class="container-fluid text-center">
@@ -63,11 +65,13 @@
         </div>
         <section>
             <article>
-                <h3>Armas</h3>
-                <p>Tenemos 3 armas: <em>principal, secundaria y cuerpo a cuerpo</em>.</p>
-                <p>Como arma principal podremos elegir entre 6 tipos de arma: <strong>Fusil de asalto, Subfusil, Escopeta, Ametralladora ligera, Fusil tactico y Fusil de presicion.</strong></p>
-                <p>Como arma secundaria hay 3 opciones base: <strong>Pistolas, Lanzadores y Especial.</strong> Pero si equipamos el comodin <em>Tirador</em> podremos equipar en este lugar otra principal.</p>
-                <p>El arma cuerpo a cuerpo siempre sera de este estilo, suele usarse para moverse mas rapido y combate muy cercano.</p>
+                <div class="m-2">
+                    <h3>Armas</h3>
+                    <p>Tenemos 3 armas: <em>principal, secundaria y cuerpo a cuerpo</em>.</p>
+                    <p>Como arma principal podremos elegir entre 6 tipos de arma: <strong>Fusil de asalto, Subfusil, Escopeta, Ametralladora ligera, Fusil tactico y Fusil de presicion.</strong></p>
+                    <p>Como arma secundaria hay 3 opciones base: <strong>Pistolas, Lanzadores y Especial.</strong> Pero si equipamos el comodin <em>Tirador</em> podremos equipar en este lugar otra principal.</p>
+                    <p>El arma cuerpo a cuerpo siempre sera de este estilo, suele usarse para moverse mas rapido y combate muy cercano.</p>
+                </div>
                 <div id="pCarrusel">
                     <div id="carrusel" class="carousel slide w-75" data-bs-ride="carousel">
                         <div class="carousel-inner">
@@ -113,39 +117,67 @@
                     </div>
                 </div>
             </article>
-            <article class="container-fluid w-75 text-center">
-                <div class="">
+            <article>
+                <div class="mt-4">
                     <h3>Equipamiento</h3>
-                    <p>Los equipamientos son: <em>tactico, letal y mejora de campo</em>, si bien tenemos mucha variedad se entiende para que son los dos primeros. La mejora de campo se recarga con el tiempo durante la partida y veremos las opciones que nos dan para elegir ya que cada una tiene su beneficio.</p>
+                    <p>Los equipamientos son: <em>tactico, letal y mejora de campo</em>, si bien tenemos mucha variedad se entiende para que son los dos primeros.</p>
+                    <p>La mejora de campo se recarga con el tiempo durante la partida y veremos las opciones que nos dan para elegir ya que cada una tiene su beneficio.</p>
                 </div>
-                <div class="row text-center">
-                    <div class="col-12 col-md-2">
-                        <img src="../assets/imagenes/EqTac.png" alt="" class="imgMenuVert">
-                    </div>
-                    <div class="col-12 col-md-2">
-                        <img src="../assets/imagenes/EqLet.png" alt="" class="imgMenuVert">
-                    </div>
-                    <div class="col-12 col-md-4">
-                        <img src="../assets/imagenes/MejorasCampo.png" alt="" class="imgMenuVert">
+                <div id="pCarrusel">
+                    <div id="carrusel2" class="carousel slide w-75" data-bs-ride="carousel">
+                        <div class="carousel-inner text-center">
+                            <div class="carousel-item active">
+                                <img src="../assets/imagenes/EqTac.png" alt="Seleccion de equipamiento tactico" class="imgMenuVert d-inline-block w100">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/imagenes/EqLet.png" alt="Seleccion de equipamiento letal" class="imgMenuVert d-inline-block w100">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/imagenes/MejorasCampo.png" alt="Seleccion de mejora de campo" class="imgCuadrada d-inline-block w100">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carrusel2" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carrusel2" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
                 </div>
             </article>
-            <article class="container-fluid w-75 text-center">
+            <article class="container-fluid w-75 mt-4 text-center">
                 <h3>Ventajas</h3>
                 <p>Tenemos 3 lugares de ventajas, en cada uno podremos elegir diferentes, si elegimos 3 del mismo tipo esto nos activa una especialidad.</p>
-                <div class="row text-center">
-                    <div class="col-12 col-md-4">
-                        <img src="../assets/imagenes/Ventaja1.png" alt="" class="imgMenuVert">
-                    </div>
-                    <div class="col-12 col-md-4">
-                        <img src="../assets/imagenes/Ventaja2.png" alt="" class="imgMenuVert">
-                    </div>
-                    <div class="col-12 col-md-4">
-                        <img src="../assets/imagenes/Ventaja3.png" alt="" class="imgMenuVert">
+                <div id="pCarrusel">
+                    <div id="carrusel3" class="carousel slide w-75" data-bs-ride="carousel">
+                        <div class="carousel-inner text-center">
+                            <div class="carousel-item active">
+                                <img src="../assets/imagenes/Ventaja1.png" alt="Elegir ventaja del slot 1" class="imgMenuVert d-inline-block w100">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/imagenes/Ventaja2.png" alt="Elegir ventaja del slot 2" class="imgMenuVert d-inline-block w100">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/imagenes/Ventaja3.png" alt="Elegir ventaja del slot 3" class="imgMenuVert d-inline-block w100">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/imagenes/EspComb.png" alt="Explicacion de las especialidades de combate" class="imgCuadrada d-inline-block w100">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carrusel3" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carrusel3" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
                 </div>
-            </article class="container-fluid w-75">
-            <article>
+            </article>
+            <article class="container-fluid mt-4 w-75">
                 <h3>Comodin</h3>
                 <p>Dependiendo el comodin que usemos tendremos un beneficio, por lo cual dependera de nuestro tipo de juego cual elijamos</p>
                 <div class="row text-center">
