Se escriben alts olvidados

--- a/pages/armamento.html
+++ b/pages/armamento.html
@@ -154,13 +154,13 @@
                     <div id="carrusel3" class="carousel slide w-75" data-bs-ride="carousel">
                         <div class="carousel-inner text-center">
                             <div class="carousel-item active">
-                                <img src="../assets/imagenes/Ventaja1.png" alt="Elegir ventaja del slot 1" class="imgMenuVert d-inline-block w100">
+                                <img src="../assets/imagenes/Ventaja1.png" alt="Seleccion de ventaja del slot 1" class="imgMenuVert d-inline-block w100">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/Ventaja2.png" alt="Elegir ventaja del slot 2" class="imgMenuVert d-inline-block w100">
+                                <img src="../assets/imagenes/Ventaja2.png" alt="Seleccion de ventaja del slot 2" class="imgMenuVert d-inline-block w100">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/Ventaja3.png" alt="Elegir ventaja del slot 3" class="imgMenuVert d-inline-block w100">
+                                <img src="../assets/imagenes/Ventaja3.png" alt="Seleccion de ventaja del slot 3" class="imgMenuVert d-inline-block w100">
                             </div>
                             <div class="carousel-item">
                                 <img src="../assets/imagenes/EspComb.png" alt="Explicacion de las especialidades de combate" class="imgCuadrada d-inline-block w100">
@@ -182,7 +182,7 @@
                 <p>Dependiendo el comodin que usemos tendremos un beneficio, por lo cual dependera de nuestro tipo de juego cual elijamos</p>
                 <div class="row text-center">
                     <div class="col-12">
-                        <img src="../assets/imagenes/Comodines.png" alt="" class="imgMenuVert">
+                        <img src="../assets/imagenes/Comodines.png" alt="Menu de seleccion de comdin" class="imgMenuVert">
                     </div>
                 </div>
             </article>
