--- a/pages/armamento.html
+++ b/pages/armamento.html
@@ -127,10 +127,10 @@
                     <div id="carrusel2" class="carousel slide w-75" data-bs-ride="carousel">
                         <div class="carousel-inner text-center">
                             <div class="carousel-item active">
-                                <img src="../assets/imagenes/EqTac.png" alt="Seleccion de equipamiento tactico" class="imgMenuVert d-inline-block w100">
+                                <img src="../assets/imagenes/EqTac.png" alt="Seleccion de equipamiento tactico" class="imgCuadrada d-inline-block w100">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/EqLet.png" alt="Seleccion de equipamiento letal" class="imgMenuVert d-inline-block w100">
+                                <img src="../assets/imagenes/EqLet.png" alt="Seleccion de equipamiento letal" class="imgCuadrada d-inline-block w100">
                             </div>
                             <div class="carousel-item">
                                 <img src="../assets/imagenes/MejorasCampo.png" alt="Seleccion de mejora de campo" class="imgCuadrada d-inline-block w100">
@@ -154,13 +154,13 @@
                     <div id="carrusel3" class="carousel slide w-75" data-bs-ride="carousel">
                         <div class="carousel-inner text-center">
                             <div class="carousel-item active">
-                                <img src="../assets/imagenes/Ventaja1.png" alt="Seleccion de ventaja del slot 1" class="imgMenuVert d-inline-block w100">
+                                <img src="../assets/imagenes/Ventaja1.png" alt="Seleccion de ventaja del slot 1" class="imgCuadrada d-inline-block w100">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/Ventaja2.png" alt="Seleccion de ventaja del slot 2" class="imgMenuVert d-inline-block w100">
+                                <img src="../assets/imagenes/Ventaja2.png" alt="Seleccion de ventaja del slot 2" class="imgCuadrada d-inline-block w100">
                             </div>
                             <div class="carousel-item">
-                                <img src="../assets/imagenes/Ventaja3.png" alt="Seleccion de ventaja del slot 3" class="imgMenuVert d-inline-block w100">
+                                <img src="../assets/imagenes/Ventaja3.png" alt="Seleccion de ventaja del slot 3" class="imgCuadrada d-inline-block w100">
                             </div>
                             <div class="carousel-item">
                                 <img src="../assets/imagenes/EspComb.png" alt="Explicacion de las especialidades de combate" class="imgCuadrada d-inline-block w100">
